--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,17 +13,35 @@
     <!-- cabecera -->
     <header>
         <nav>
-            <a href="index.html" target="_parent">Inicio</a>
-            <a href="pages/nostros.html" target="_parent">Sobre nosotros</a>
-            <a>                                                      </a>
-            <a href="pages/oferta.html" target="_parent">Ofertas</a>
-            <a href="pages/catalogo.html" target="_parent">Catalago</a>
-            <a href="pages/contacto.html" target="_parent">Contacto</a>
-
-
+            <h1>RoparArg</h1>
+            <ul>
+                <li><a href="../index.html" target="_parent">Inicio</a></li>
+                <li><a href="../pages/nostros.html" target="_parent">Sobre nosotros</a></li>
+                <li><a href="../pages/oferta.html" target="_parent">Ofertas</a></li>
+                <li><a href="../pages/catalogo.html" target="_parent">Catalago</a></li>
+                <li><a href="../pages/contacto.html" target="_parent">Contacto</a></li>
+            </ul>
         </nav>
-        <hr width=100%>
+        </div>
     </header>
+    <!-- Principal  -->
+    <main>
+
+        <div class="mapa">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52544.0913575574!2d-58.43167675062672!3d-34.6040171246622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1679279068125!5m2!1ses-419!2sar"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </main>
+    <!-- Pie de pagina  -->
+    <footer>
+        <div class="pie">
+            <p>1717 Harrison St, San Francisco, CA 94103,ARG
+                © 2023 RopaArg.
+                All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
