--- a/pages/oferta.html
+++ b/pages/oferta.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>RoparArg</title>
 </head>
+
 <body>
+    <!-- cabecera -->
+    <header>
+        <nav>
+            <h1>RoparArg</h1>
+            <ul>
+                <li><a href="../index.html" target="_parent">Inicio</a></li>
+                <li><a href="../pages/nostros.html" target="_parent">Sobre nosotros</a></li>
+                <li><a href="../pages/oferta.html" target="_parent">Ofertas</a></li>
+                <li><a href="../pages/catalogo.html" target="_parent">Catalago</a></li>
+                <li><a href="../pages/contacto.html" target="_parent">Contacto</a></li>
+            </ul>
+        </nav>
+        </div>
+    </header>
+    <!-- Principal  -->
+    <main>
+        
+    </main>
+    <!-- Pie de pagina  -->
     
+    <footer>
+        <div class="pie">
+            <p>1717 Harrison St, San Francisco, CA 94103,ARG
+                © 2023 RopaArg.
+                All rights reserved.</p>
+        </div>
+    </footer>
 </body>
+
 </html>
