--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -26,8 +26,15 @@
     </header>
     <!-- Principal  -->
     <main>
-        
-    </header>
+      <div class="fondo">
+            <div class="grid">
+                <div class="fotoun"><img src="../assent/img/SEB_4191-copy.jpg">
+                </div>
+                <div class="fotods"><img src="../assent/img/650w_DriftersPDP_APP_TRSH340100-080_Shot1.jpg"></div>
+                <div class="fotots"><img src="../assent/img/D_NQ_NP_684047-MLA52578564079_112022-O.webp"></div>
+                <div class="fotots"><img src="../assent/img/D_NQ_NP_684047-MLA52578564079_112022-O.webp"></div>
+            </div>
+        </div>
     </main>
     <!-- Pie de pagina  -->
     <footer>
