--- a/pages/nostros.html
+++ b/pages/nostros.html
@@ -26,7 +26,15 @@
     </header>
     <!-- Principal  -->
     <main>
+        <div class="somos">
+
+        </div>
         
+        <div class="nosotros">
+            <h2>
+                Somos una empresa argentina de venta de ropa de ciudad capital
+            </h2>
+        </div>
     </main>
     <!-- Pie de pagina  -->
     <footer>
