--- a/pages/oferta.html
+++ b/pages/oferta.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <!-- cabecera -->
     <header>
         <nav>
@@ -26,10 +27,22 @@
     </header>
     <!-- Principal  -->
     <main>
-        
+        <div class="contenedor">
+        </div>
+        <div class="Descuento">
+            <h2>
+                20% off en estas prendas
+            </h2>
+        </div>
+        <div class="destacado">
+            <div class="fotou"></div>
+            <div class="fotod"></div>
+            <div class="fotot"></div>
+
+        </div>
     </main>
     <!-- Pie de pagina  -->
-    
+
     <footer>
         <div class="pie">
             <p>1717 Harrison St, San Francisco, CA 94103,ARG
