--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,12 +27,61 @@
     <!-- Principal  -->
     <main>
 
+        <div class="contenido">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/HcvUqUxJq4Y"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+
+            <div class="formulario">
+                <form action="#">
+                    <label for="apellido">Nombre
+                    <input type="text" placeholder="Nombre">
+                    </label>
+                    <label for="apellido">Apellido
+                        <input type="text" name="Apellido">
+                    </label><br>
+                    <input type="number" placeholder="Edad"><br>
+                    <textarea name="" id="" cols="60" rows="10" placeholder="comentarios"></textarea><br>
+                    <fieldset>
+                        <legend>De que lado estas</legend>
+                        <select name="lado" id="lado">
+                            <option value="A">Arriba</option>
+                            <option value="Ab">Abajo</option>
+                        </select>
+                    </fieldset>
+                    <div>
+                        <p>De que lado</p>
+                        <select name="lado" id="lado">
+                            <option value="A">Arriba</option>
+                            <option value="Ab">Abajo</option>
+                        </select>
+                    </div>
+                    <div>Izquierda <input type="radio" name="ladoE"></div>
+                    <div>Derecha <input type="radio" name="ladoE"></div>
+                    <div>Centro <input type="radio" name="ladoE"></div>
+                    <input type="submit" value="ENVIAR"><input type="reset" value="RESETEAME">
+                </form>
+            </div>
+
+
+
+
+
+        </div>
+        <div class="texto">
+            <h2>
+                Donde encontrarnos
+            </h2>
+
+        </div>
         <div class="mapa">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52544.0913575574!2d-58.43167675062672!3d-34.6040171246622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1679279068125!5m2!1ses-419!2sar"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+
     </main>
     <!-- Pie de pagina  -->
     <footer>
