--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 </head>
 
 <body>
-    <!-- cabecera -->
-    <header>
-        <nav>
-            <h1>RoparArg</h1>
-            <ul>
-                <li><a href="index.html" target="_parent">Inicio</a></li>
-                <li><a href="pages/nostros.html" target="_parent">Sobre nosotros</a></li>
-                <li><a href="pages/oferta.html" target="_parent">Ofertas</a></li>
-                <li><a href="pages/catalogo.html" target="_parent">Catalago</a></li>
-                <li><a href="pages/contacto.html" target="_parent">Contacto</a></li>
-            </ul>
-        </nav>
-        </div>
+    <div class="mobile">
+        <!-- cabecera -->
+        <header>
+            <nav>
+                <h1>RoparArg</h1>
+                <ul>
+                    <li><a href="index.html" target="_parent">Inicio</a></li>
+                    <li><a href="pages/nostros.html" target="_parent">Sobre nosotros</a></li>
+                    <li><a href="pages/oferta.html" target="_parent">Ofertas</a></li>
+                    <li><a href="pages/catalogo.html" target="_parent">Catalago</a></li>
+                    <li><a href="pages/contacto.html" target="_parent">Contacto</a></li>
+                </ul>
+            </nav>
+    </div>
     </header>
     <!-- Principal  -->
     <main>
@@ -66,6 +67,7 @@
                 All rights reserved.</p>
         </div>
     </footer>
+    </div>
 </body>
 
 </html>
